# Template-AutoUpdate

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  toolchain.cmake
